# microwrap

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
example/: Dockerfile  Version.java  microwrap.json  version.sh
microwrap/: __init__.py  microwrap.py
